add 1st week tasks and addressbook

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "ru.stqa.pft.sandbox.HelloWorld"
+
 
 repositories{
 
@@ -9,4 +8,5 @@ repositories{
 
 dependencies{
     implementation 'org.testng:testng:7.3.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
 }
