--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,6 +7,7 @@ repositories{
 }
 
 dependencies{
+    implementation 'org.hamcrest:hamcrest-library:2.2'
     implementation 'org.testng:testng:7.3.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
