--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,9 +7,37 @@ repositories{
 }
 
 dependencies{
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.thoughtworks.xstream:xstream:1.4.14'
+    implementation 'com.beust:jcommander:1.78'
     implementation 'org.hamcrest:hamcrest-library:2.2'
     implementation 'org.testng:testng:7.3.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
 }
+task testGroups (type: Test) {
+    useTestNG {
+        suites 'src/test/resources/testng-groups.xml'
+    }
+    if (projet.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+    if (projet.hasProperty('target')) {
+        systemProperty 'target', "${target}"
+    }
+    }
+
+    task testContacts(type: Test) {
+        useTestNG {
+            suites 'src/test/resources/testng-contacts.xml'
+        }
+        if (projet.hasProperty('browser')) {
+            systemProperty 'browser', "${browser}"
+        }
+        if (projet.hasProperty('target')) {
+            systemProperty 'target', "${target}"
+        }
+
+    }
