--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -34,7 +34,7 @@ task testGroups (type: Test) {
     }
     }
 
-    task testContacts(type: Test) {
+ /*   task testContacts(type: Test) {
         useTestNG {
             suites 'src/test/resources/testng-contacts.xml'
         }
@@ -48,4 +48,4 @@ task testGroups (type: Test) {
             systemProperty 'verifyUI', "${verifyUI}"
         }
 
-    }
+    }*/
