remote start of selenium

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -26,6 +26,10 @@ task testGroups (type: Test) {
     if (project.hasProperty('browser')) {
         systemProperty 'browser', "${browser}"
     }
+
+if (project.hasProperty('platform')) {
+    systemProperty 'platform', "${platform}"
+}
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"
     }
@@ -34,13 +38,17 @@ task testGroups (type: Test) {
     }
     }
 
- /*   task testContacts(type: Test) {
+   task testContacts(type: Test) {
         useTestNG {
             suites 'src/test/resources/testng-contacts.xml'
         }
         if (project.hasProperty('browser')) {
             systemProperty 'browser', "${browser}"
         }
+
+       if (project.hasProperty('platform')) {
+           systemProperty 'platform', "${platform}"
+       }
         if (project.hasProperty('target')) {
             systemProperty 'target', "${target}"
         }
@@ -48,4 +56,10 @@ task testGroups (type: Test) {
             systemProperty 'verifyUI', "${verifyUI}"
         }
 
-    }*/
+    }
+task rf(type: JavaExec) {
+    main = 'org.robotframework.RobotFramework'
+    classpath = sourceSets.test.runtimeClasspath
+    args '--outputdir', 'build/rf-report'
+    args 'src/test/resources/rf'
+}
