jenkins in progress

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -62,3 +62,7 @@ task rf(type: JavaExec) {
     args '--outputdir', 'build/rf-report'
     args 'src/test/resources/rf'
 }
+
+test {
+    useTestNG()
+}
