--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -63,6 +63,9 @@ task rf(type: JavaExec) {
     args 'src/test/resources/rf'
 }
 
-test {
-    useTestNG()
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+tasks.withType(Test) {
+    systemProperty "file.encoding", "UTF-8"
 }
