--- a/addressbook-web-tests/src/test/resources/remote.properties
+++ b/addressbook-web-tests/src/test/resources/remote.properties
@@ -1,4 +1,4 @@
-web.baseUrl = localhost:8081/addressbook
+web.baseUrl = http://192.168.0.109:8081/addressbook/
 web.adminLogin = admin
 web.adminPassword = secret
 selenium.server = http://192.168.0.109:4444/wd/hub
